# fax_tool_v1

./: .gitignore  CMakeLists.txt  README.txt  fax_tool.VC.VC.opendb  fax_tool.sln  fax_tool.vcxproj  fax_tool.vcxproj.filters  ~AutoRecover.fax_tool.vcxproj  ~AutoRecover.fax_tool.vcxproj0  ~AutoRecover.fax_tool.vcxproj2
Debug/: vc140.idb
Debug/fax_tool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fax_tool.lastbuildstate
doc/: cmake_help.doc
src/: CMakeLists.txt  a.out  fax_decode.c  fax_tool.c  fax_utils.c  fax_utils.h  modem_connect_tones_tests.c  pcap_parse.c  t38_decode.c  test.cpp  test2  test2.c  test2.s  test3  test3.c  test3.s
