PROJECT(FAX_TOOL)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE(STATUS "FAX TOOL start compile...")

SET(CMAKE_INSTALL_PREFIX /usr/local)

ADD_SUBDIRECTORY(src bin)

#SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/bin)

#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#ADD_EXECUTABLE(test test.cpp)
